--- a/test.tex
+++ b/test.tex
@@ -854,7 +854,7 @@ Note also that the Lenz-Wyler formula is nothing but the product of the area by 
 Note that, with $q = 2^{12}$ to 0.03 \%, 2.5 \% and 41 ppm:
 $$R_{GC}/\lambdabar_e \approx q\times 5^{137} \approx 6^{137}/q^2 \approx 6^{128}/(1+1/\sqrt2)$$
 Since $R/\lambdabar_e \approx 2^{128}$, the decomposition of 6 leads to a natural Universe-Grandcosmos partition, and to the following approximation for the tachyonic celerity ratio (0.01\%) 
-$$ C/c\approx3^{128} (p_K/p_G \delta)^2 $$ where $p_K$ is the Koide constant (see section 9.5). This confirms the role of the correspondance quark up = 5 and \textit{quark d = 6 with a double structure}. It is an example of \textit{immergence}, i.e. deducing the small from the large, in a striking similitude between cosmology and nuclear physics. Another example was encontered in section 2.4, where dimensional analysis gives the visible Universe radius, in an easier way than the equivalent one for the Hydrogen atom radius, since for this case there is no evidence that $c$ must be left out.
+$$ C/c\approx3^{128} (p_K/p_G \delta)^2 $$ where $p_K$ is the Koide-Sanchez constant (see section 9.5). This confirms the role of the correspondance quark up = 5 and \textit{quark d = 6 with a double structure}. It is an example of \textit{immergence}, i.e. deducing the small from the large, in a striking similitude between cosmology and nuclear physics. Another example was encontered in section 2.4, where dimensional analysis gives the visible Universe radius, in an easier way than the equivalent one for the Hydrogen atom radius, since for this case there is no evidence that $c$ must be left out. Another example is the coherence of the stimulated emission iself, which is a global effect in a homogeneous media (atomic coherence).
 Elimination of $q$ leads to (2.6 \%):
 $(R_{GC}/\lambdabar_e)^3 \approx 150^{137}$. 
 
@@ -862,9 +862,7 @@ In Atiyah's last work the Bernoulli function $x/(1-e^{-x})$ is used. This is the
 \begin{equation}
 a \approx 44\pi - Arccos(1/e)
 \end{equation}
-a formula largely diffused on the web, but without indication of its origin. Now $w^{e^w}$ enters (1 ppm):
-$$w^{e^w+1} \approx \sqrt{ad\sqrt{n/p}}R_{GC}/\lambdabar_e $$
-This confirms that the Planck thermal law will play a central importance in the future fundamental theory. 
+a formula largely diffused on the web, but without indication of its origin.
 
 \subsection {The Archimedes constant $\pi$ as a calculation base}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\textit{Back to Cosmos}}
@@ -900,10 +898,7 @@ p_G = \sqrt{pH} (p/H)^3/d_e
 \begin{equation}
 \lambdabar/l_{eF} \approx 137 \times 2\Gamma
 \end{equation}
-leading to:
-\begin{equation} 
-F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652
-\end{equation}
+leading to $F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652$
 This relation is so striking that we ask the computer if it can find synthetic precise relations involving the other forces parameters, in function of $\pi$ and $\Gamma$. Indeed, with the neutron/electron mass ratio $n \approx 1838.68366089(17)$, the computer gives the following relation in the ppb range:
 \begin{equation}
 aF/\sqrt(pH) \approx \pi(4n/\Gamma)^3/p_G \approx \mu^2
