--- a/test.tex
+++ b/test.tex
@@ -406,7 +406,7 @@ It was shown in fact, that a number of superfast, with periods inferior to 2 day
 
 \subsection{The Tifft, Arp and Pioneer effects}
 
-Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift \cite{Tifft}. Now, this speed corresponds to the quantum resonance: $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$ where $r_{e} = \lambdabar_e/a$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass \cite{Sanchez5}.
+Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift \cite{Tifft}. Now, this speed corresponds to the quantum resonance: $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$ where $r_{e} = \lambdabar_e/a$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass.
 
 The Halton Arp observations of chains of galaxies with different redshifts \cite{Arp} was also rejected. But it could be the sign of the galactic regeneration constantly maintaining the visible Universe mass: this is sustained by the following section proving the invariance of the mean mass density $\rho_{c}$.
 
