--- a/test.tex
+++ b/test.tex
@@ -139,7 +139,7 @@ Contents
 \section{The Principles of Hierarchy and Computation}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant $a_{G}$ was neither well defined nor measured, partially due to the relatively large imprecision 10$^{-4}\!$ on $G$ measurement .
+It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. The gravitational coupling constant $a_{G}$ was the square of the ratio proton/Planck wavelength, subjected to a relatively large imprecision 10$^{-4}\!$ due to the imprecision on $G$ measurement. In fact, the authors,  condidered rather the inverse of $a$ and $a_G$, noted $\alpha$and $\alpha_G$. The present article will show that our notation, following Eddington, is far more judicious.
 
 One can read \cite{Carr}: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependencies on $a$ and $a_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from known physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
 
@@ -203,7 +203,7 @@ $$
 \sim (\lambdabar_{e}/ l_{Gl} )^{64} \sim (\lambdabar_{str} /\lambdabar_{e} )^{128} \sim 2^{256}\\ % 3rd row
 \end{array}
 $$
-This series include the Cosmic Microwave Background wavelength $\lambda_{CMB}$ and a string wavelength $\lambdabar_{str}$, with mass about 2 MeV. Hence, the correlation is eight-fold, including, apart from the two above relationships, three relations that have been independently reported \cite{Sanchez1}. The overall large number $2^{256}$ has an obvious computational characteristic, confirmed below by the dramatic appearance of the Eddington Large Number.
+This series include the Cosmic Microwave Background wavelength $\lambda_{CMB}$ and a string wavelength $\lambdabar_{str}$, with mass about 2 MeV. Hence, the correlation is eight-fold. They include implicitly the above double fine-tuning and three relations more that have been independently reported \cite{Sanchez1}. Thus, only three relations are really new. The overall large number $2^{256}$ has an obvious computational character, confirmed below by the dramatic appearance of the Eddington Large Number.
 
 In particular, the relation $R/\lambdabar_{e} \sim (\lambda_{CMB} / \lambdabar_{e})^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation that is incompatible with the standard evolutionary cosmology. By this order of magnitude, we infer rather precise relations. With the Hydrogen radius $r_H$, we infer 
 $ R/r_H \approx (4\pi \lambda_{CMB}/r_H)^{4}$, precise to $0.6\%$. 
