--- a/test.tex
+++ b/test.tex
@@ -320,18 +320,11 @@ R_1^3/R_{GC}^2 \approx \lambdabar_M
 \end{equation}
 this will be of paramount importance in section 7.3.
 
-With the Kotov length $l_{K} = ct_{K}$ (see below), one notes that $(R/a_w l_K)^{1/2} $ is close to $\sqrt{a}$, while the replacement of $R$ by $R_{1}$ is about $4\pi$, the canonical form for $\sqrt{a}$, the deviation being compatible with $p/p_{0}$:
-$$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from $G$. 
 
-This $t_K$ value will be confirmed, in the ppb range, by the value deduced from $t_{K} /t_{e} = (a_{G} a_{w})^{1/2}$, see below, using values of $a_{w}$ and $a_{G}$ defined, connecting, again in the ppb range, in section 9.4. 
-
-From the holographic two-step interaction \cite{Sanchez1}, it was deduced that the Kotov period is associated with the photon mass. With the above value, it is $m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
-$m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $ kg.
-The ratios with electron mass (Fig.1) corresponds respectively to n = 24 and $n = \Gamma$, the Atiyah constant (section 8.2) The ratio $M/m_{ph} \approx (3/e)O^2_M$, to 0.1\%, with $O_M$ the cardinal order of the Monster group.
 
 \subsection{The Cosmic Coherent Oscillation (CCO)}
 
-The Kotov non-Doppler cosmic oscillation \cite{Sanchez1} is not considered seriously, since it seems to violate the most basic prerequisite of physics, the generality of Doppler phenomena. Interpreting this as a tachyonic phenomenon, we identified the Kotov period $t_{K} \simeq 9600.06(2) s$, taking the electron characteristic time $t_{e} = \lambdabar_{e} /c$ as unit, to the simplest relation eliminating $c$ between $a_{G}$ and $a_{w}=
+The Kotov non-Doppler cosmic oscillation \cite{Kotov1} is not considered seriously, since it seems to violate the most basic prerequisite of physics, the generality of Doppler phenomena. Interpreting this as a tachyonic phenomenon, we identified the Kotov period $t_{K} \simeq 9600.06(2) s$, taking the electron characteristic time $t_{e} = \lambdabar_{e} /c$ as unit, to the simplest relation eliminating $c$ between $a_{G}$ and $a_{w}=
 \hbar^{3} /G_{F} m_{e}^{2} c$, the well measured $(3\cdot 10^{-7})$ dimensionless electroweak coupling constant $a_{w}$ :
 \begin{equation}
 t_{K} / t_{e} = (a_{G} a_{w})^{1/2}
@@ -355,6 +348,19 @@ $$\begin{array}{ll}
 G \approx 6.6754552 \times 10^{-11} kg^{-1} m^{3} s^{-2} \\
 \end{array}$$
 This value will be confirmed, in the ppb range, in Section 9.
+
+With the Kotov length $l_{K} = ct_{K}$ (see below), one notes that $(R/a_w l_K)^{1/2} $ is close to $\sqrt{a}$, while the replacement of $R$ by $R_{1}$ is about $4\pi$, the canonical form for $\sqrt{a}$, the deviation being compatible with $p/p_{0}$:
+$$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from $G$. 
+
+This $t_K$ value will be confirmed, in the ppb range, by the value deduced from the above $t_{K} /t_{e} = (a_{G} a_{w})^{1/2}$, using values of $a_{w}$ and $a_{G}$ defined, again in the ppb range, in section 9.4. 
+
+From the holographic two-step interaction \cite{Sanchez1}, it was deduced that the Kotov period is associated with the photon mass. With the above value, it is $m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
+$m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $ kg.
+The ratios with electron mass (Fig.1) corresponds respectively to n = 24 and $n = \Gamma$, the Atiyah constant (section 8.2) One notes the relation (0.1\%), very usefull for the following:
+\begin{equation}
+M/m_{ph} \approx (3/e)O^2_M
+\end{equation}
+with $O_M$ the cardinal order of the Monster group.
 
 \subsection{The omnipresence of CC0 in astrophysics}
 
