--- a/test.tex
+++ b/test.tex
@@ -512,10 +512,9 @@ Introducing the above Pioneer abnormal deceleration $g_{Pn}$, one gets the time:
 $
 t\{G, m_{e} , g_{Pn} \} = (Gm_{e} /g_{Pn}^{3} )^{1/4} = (t_{Pn}^{3} t^{\prime}_{e} )^{1/4}
 $, where $t_{Pn} = c/g_{PN}$ and $t^{\prime}_{e} = Gm_{e} /c^{3}$ . This time is compatible with:
-\begin{equation}
+$
 t\{G, m_{e} , g_{Pn} \} = t_{K} /(F/a)^{2}
-\end{equation}
-where the above Tifft factor $F/a$ appears. The implication of the time 
+$, where the above Tifft factor $F/a$ appears. The implication of the time 
 $t^{\prime}_{e}\, = Gm_{e} /c^{3} = 2.2568 \times 10^{-66} s$
 confirms the above Planck's wall breakdown.
 
