--- a/test.tex
+++ b/test.tex
@@ -668,8 +668,7 @@ meaning the ratio $a/137$ acts as a canonical ratio. Indeed, the Bizouard consta
 $$(a/137)^F \approx 3^a \approx f^{f^2}/\pi \approx (O_B/f)^2 \approx P^4 (2/3)^a (p/p_0)^2 $$
 proving that the base 3, \textit{the optimal whole number base}, is also used by the Cosmos. Also $O_B$, the cardinal order  of the Baby Monster plays a role (as confirmed below). 
 Note that while $R/\lambdabar_e \approx 2^{128}$, to 0.6 \%, $R^{\prime}/\lambdabar_e \approx 27^{27}$, with $27 = 3^3$ to 0.03 \%  Moreover, to 27 ppb:
-$$ a/(a-1) \approx 3^{1/150} $$
-Thus, the basis 3 makes a liaison between $a/137$ and $a/(a-1)$, very close (2 ppm) to the Bond factor 137/136, central in Eddington's theory \cite{Eddington}.
+$ a/(a-1) \approx 3^{1/150} $. Thus, the basis 3 makes a liaison between $a/137$ and $a/(a-1)$, very close (2 ppm) to the Bond factor 137/136, central in Eddington's theory \cite{Eddington}.
 
 \subsection{The Atiyah and Sternheimer constants}
     Sir Michael Atiyah was a precursor in the search for unity in Mathematics and Physics. His last work in this domain introduced the constant $$\Gamma = \gamma a /\pi$$ as a simplification term \cite{Atiyah1}. Indeed $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 4.1) single-electron cosmic formula (0.3 ppm):    
