--- a/test.tex
+++ b/test.tex
@@ -58,7 +58,7 @@ $^9$Lecturer at ENSA Paris Malaquais, France (retired). lgueroult@hotmail.com
 \medskip
 {\small\parbox{11cm}{%
 \hfill To the memory of Sir Michael Atiyah\\
-The antique concept of permanent Cosmos is reintroduced as a perfect deterministic computer, inverting the anthropic principle and interpreting the dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which exhibits the string theory dimension series 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the Holographic Principle defines the Grandcosmos and a $10^{61}$ trans-Plankian quantified time. This confirms the matter-antimatter Oscillatory Bounce and resolves at last the vacuum energy dilemma. The mathematics-physics fusion is proved by $10^{-9}$ precise relations, implying the Eddington's constant 137 and the Atiyah's one, showing Four Force Unification. The Holic Principle and Eddington's Theory must unlock Particle Physics, with massive gluons and composite d quark.  Based on the imperfect cosmological principle, the standard evolutionary cosmology, will be excluded by the observation of mature galaxies in the very far-field, and also by the invariance of the CMB temperature.  
+The antique concept of permanent Cosmos is reintroduced as a perfect deterministic computer, inverting the anthropic principle and interpreting the dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which exhibits the string theory dimension series 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the Holographic Principle defines the Grandcosmos and a $10^{61}$ trans-Plankian quantified time. This confirms the matter-antimatter Oscillatory Bounce and resolves at last the vacuum energy dilemma. The mathematics-physics fusion is proved by $10^{-9}$ precise relations, showing Four Force Unification with the Eddington's constant 137 and the Atiyah's one. The Holic Principle and Eddington's Theory must unlock Particle Physics, with massive gluons and composite d quark.  Based on the imperfect cosmological principle, the standard evolutionary cosmology, will be excluded by the observation of mature galaxies in the very far-field, and also by the invariance of the CMB temperature.  
 
 %Mature galaxies will be found in the far-field instead of a dark space, rejecting thus the evolutionary cosmology, ill-founded %o%%n the imperfect cosmological principle.
 
@@ -85,7 +85,7 @@ Contents
 
 3. The Toponic Holographic Quantification
 
-4. The Tachyonic Flickering Space-Time-Matter}
+4. The Tachyonic Flickering Space-Time-Matter
 
 ~~~   4.1. The Single Electron Cosmology
    
@@ -97,17 +97,17 @@ Contents
    
 5. The Logic of Dimensional Analysis
 
-6. The Arithmetical Logic: Holic Principle
+6. The Arithmetical Logic: the Holic Principle
 
-7. The Special Holographic Relations
+7. The special holographic relations
 
-~~~    7.1. The Conservation of Information
+~~~    7.1. The conservation of information
    
-~~~    7.2. The Cosmic Temperature
+~~~    7.2. The cosmic temperature
 
 ~~     7.3. The Holic Principle and CCO 
     
-8. The role of Intermediary Mathematical Constants
+8. The role of intermediary mathematical constants
 
 ~~~    8.1. The Eddington's constant 137
    
@@ -115,9 +115,9 @@ Contents
    
 ~~~    8.3. The ubiquity of $a^a$
    
-~~~    8.4. The intervention of Sporadic Groups
+~~~    8.4. The intervention of sporadic groups
    
- 9. The Fine-Tuning with basic mathematical constants
+ 9. The fine-tuning with basic mathematical constants
  
 ~~~    9.1. The optimal calculation base $e$ confirmed
    
@@ -125,13 +125,13 @@ Contents
    
 ~~~    9.3. The Archimedes constant $\pi$ as a calculation base
    
-~~~    9.4. The Four Force Unification in ppb Fine-Tuning
+~~~    9.4. The four force Unification in ppb fine-tuning
    
-~~~    9.5. The Heavy Leptons Fine-Tuning
+~~~    9.5. The heavy leptons fine-tuning
    
  10. Discussion
  
- 11. Conclusions: Cosmic Simplicity at work
+ 11. Conclusions: cosmic simplicity at work
  
  12. Predictions
     
