--- a/test.tex
+++ b/test.tex
@@ -85,7 +85,7 @@ Contents
 
 3. The Toponic Holographic Quantification
 
-4. The Tachyonic Flickering Space-Time-Matter
+4. The Tachyonic Flickering Space-Time-Matter}
 
 ~~~   4.1. The Single Electron Cosmology
    
