--- a/test.tex
+++ b/test.tex
@@ -141,23 +141,23 @@ Contents
 
 It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. The gravitational coupling constant $a_{G}$ was the square of the ratio proton/Planck wavelength, subjected to a relatively large imprecision 10$^{-4}\!$ due to the imprecision on $G$ measurement. In fact, the authors condidered rather the inverse of $a$ and $a_G$, noted $\alpha$and $\alpha_G$. The present article will show that our notation, following Eddington, is far more appropriate.
 
-One can read \cite{Carr}: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependencies on $a$ and $a_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from known physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
+One can read \cite{Carr}: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependencies on $\alpha$ and $\alpha_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from known physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
 
-The existence of relations that are not explained by known physical theories, is called 'natural fine tuning' phenomena. But, as soon as it involves the observable Universe radius, it signals the existence of a fundamental theory that must take into account the \textit{antique Cosmos concept, which, as Eddington claimed firstly \cite{Eddington}, must be permanent}. Extending this to the standard spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology and the basis of Coherent Cosmology \cite{Sanchez1}.
+The existence of relations that are not explained by known physical theories, is called 'natural fine tuning' phenomena. But, as soon as it involves the observable Universe radius, it signals the existence of a fundamental theory that must take into account the \textit{antique Cosmos concept, which, as Eddington claimed \cite{Eddington}, must be permanent}. Extending this to the standard spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology and the starting point of Coherent Cosmology \cite{Sanchez1}.
 
-So Eddington considered rightly the Cosmic Large Number correlations, as recalled in this article. However, his work was rejected for obscure reasons and this rejection was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed since far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Thus, through the above Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe \cite{Carr}.
+Eddington interpreted rightly the Cosmic Large Number correlations, as recalled in this article. However, his work was rejected for obscure reasons and this rejection was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed since far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Thus, through the above Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe \cite{Carr}.
 
-The present article shows that \textit{Physics is a unique part of Mathematics, which are presently incomplete}. We refute here the Multiverse Hypothesis by very precise fine-tuning (untill $10^{-9})$ between main physical and mathematical constants: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, this study confirms the super-string theory, but with complete rehabilitation of the \textit{tachyonic} bosonic string theory.
+\textit{This article shows that physics is a unique part of presently incomplete mathematics}. We refute here the Multiverse hypothesis by showing very precise fine-tuning (untill $10^{-9})$ between main physical and the mathematical constants: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, this study implies the 26 sporadic groups and confirms the super-string theory, but with complete rehabilitation of the \textit{tachyonic} bosonic string theory.
 
-\textit{A decisive point of physics is the energy conservation, the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the cosmological computation. This Inverted Anthropic Principle answers the first of all questions: why one asks questions? We propose that the parameters are optimal base in a Deterministic Computing Cosmos, and they appear indeed in DNA characteristics and triple-point temperatures of mammals and main molecules \cite{Sanchez1}.
+\textit{A decisive point of physics is the energy conservation, the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the cosmological computation. This Inverted Anthropic Principle answers the first of all questions: why one asks questions? We propose that the parameters are optimal bases in a deterministic computing Cosmos. They appear indeed in DNA characteristics and triple-point temperatures of mammals and main molecules \cite{Sanchez1}.
 
 \textit{This reinstates the Laplace determinism}, involving non-local hidden variables, which are identified with the Cosmos, so rejecting the standard Copenhagen statistical interpretation of quantum mechanics.
 
 The fact that three parameters, among 30, are so clearly emerging means that physics, and more generally science, follows a Hierarchical Principle: \textit{one can progress without knowing the details of the underlying fundamental theory.}
 
-So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in Biology, he anticipated genetics. 
+So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in biology, he anticipated genetics. 
 
-In the same manner, this article prefigures \textit{the fundamental theory, but precising its arithmetical foundation: the Holic Principle}, recalled in section 6. Thus, there must exist multi-base algorithms able to explain the compatibility between these two principles, Hierarchy and Computation, which seems at first sight somewhat contradictory. 
+In the same manner, \textit{this article prefigures the fundamental theory, but precising its arithmetical foundation: the Holic Principle}, recalled in section 6. Thus, there must exist multi-base algorithms able to explain the compatibility between these two principles, Hierarchy and Computation, which seems at first sight somewhat contradictory. 
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
