--- a/test.tex
+++ b/test.tex
@@ -139,7 +139,7 @@ Contents
 \section{The Principles of Hierarchy and Computation}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. The gravitational coupling constant $a_{G}$ was the square of the ratio proton/Planck wavelength, subjected to a relatively large imprecision 10$^{-4}\!$ due to the imprecision on $G$ measurement. In fact, the authors condidered rather the inverse of $a$ and $a_G$, noted $\alpha$and $\alpha_G$. The present article will show that our notation, following Eddington, is far more appropriate.
+It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. The gravitational coupling constant $a_{G}$ was the square of the ratio Planck/proton mass, subjected to a relatively large imprecision 10$^{-4}\!$ due to the imprecision on $G$ measurement. In fact, the authors condidered rather the inverse of $a$ and $a_G$, noted $\alpha$and $\alpha_G$. The present article will show that our notation, following Eddington, is far more appropriate.
 
 One can read \cite{Carr}: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependencies on $\alpha$ and $\alpha_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from known physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
 
@@ -165,19 +165,19 @@ In the same manner, \textit{this article prefigures the fundamental theory, but 
 \centering
 \includegraphics[width=\textwidth,height=14cm]{./figures/figure}
 \caption{\textit{The Topological Axis}. The double natural logarithms (y = lnln(Y)) of the main dimensionless physical quantities (Y) corresponds to the special string dimension series n = 4k + 2, from k = 0 to k = 7, showing the Bott
-periodicity 8 [19] which is at the origin of the name `Topological Axis`. 
-\textit{With unit the Electron Compton wavelength, in the macro-physics side}, the Universe circumference 
-    is tied to the bosonic critical dimension 26, while Bott reduction 8 leads to n = 18: thermal photon (Cosmological Microwave Background) tied to the the mammal wavelength through the Sternheimer scale factor j (section 8.2), n = 10 (super-string dimension): Hydrogen atom, and n = 2: string. For the number 24 of transverse dimensions, it is
+periodicity $\delta n = 8$ [19]. This is the origin of the name `Topological Axis`. 
+\textit{In the macro-physics side, with length unit the Electron Compton wavelength} the Universe circumference 
+    is tied to the bosonic critical dimension 26, while Bott reduction $\delta n = 8$ leads to n = 18: thermal photon (Cosmological Microwave Background), tied to the the mammal wavelength through the Sternheimer scale factor j (section 8.2); n = 10 (super-string dimension): Hydrogen atom, and n = 2: string. For the number 24 of transverse dimensions, it is
     the Kotov length (section 4.3), through a factor 2$\pi a$, with $a \approx 137.036$. For $n \approx \Gamma $, the Atiyah constant (section 8.2), it is the galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years, section 2.1). For $k \approx e^{2}$, $y \approx 2e$, it is the Grandcosmos radius (section 3).
-   \textit{With the same unit, the Electron Compton wavelength, in the micro-physics side}, the Space-Time-Matter
-    Holic dimension n = 30 (section 6) is tied to $c$ times the cosmic Supercycle period (section 5), while Bott reductions lead to the gauge bosons. The first one is for n = 22: GUT bosons, $10^{16}$ GeV), then n = 14: weak bosons and n = 6 (\textit{massive} gluons, about 10 MeV).
+   \textit{In the micro-physics side, with the same length unit, the Electron Compton wavelength}, the Space-Time-Matter
+    Holic dimension n = 30 (section 6) is tied to $c$ times the cosmic Supercycle period (section 5), while Bott reductions lead to the gauge bosons. The first one is for n = 22: GUT bosons, $10^{16}$ GeV, then n = 14: weak bosons and n = 6 (\textit{massive} gluons, about 10 MeV).
     For the superstring n = 10, there are the Pions. For $k \approx \pi$, n $\approx \gamma \times \Gamma$, Y $\approx 496^2$ 
     the square of the Green-Schwarz string dimension and the tenth root of the Monster cardinal, it is
     the Brout-Englert-Higgs boson (125 GeV). For k $\approx 2e^e$, it is the topon, the visible Universe wavelength,
     which identifies with the mono-radial unit length of the Bekenstein-Hawking Universe entropy (section 3).
    \textit{With unit the electron mass}, n = 24 would correspond to the photon mass, while n $\approx \Gamma$, 
     to the graviton mass \cite{sanchez 1}.
-    \textit{With unit the Kotov length}, the holic dimension n = 30 corresponds to the Monster cardinal, 
+    \textit{With unit the Kotov length}, the holic dimension n = 30 corresponds to the Monster group cardinal order, 
     apart a $\sqrt2$ factor.}
     \textit{The central dimension is n = 16, suggesting that the whole schema is tied to the Eddington's matrix $16 \times 16$}.
 \label{fig:figure_label}
