--- a/test.tex
+++ b/test.tex
@@ -166,12 +166,10 @@ In the same manner, \textit{this article prefigures the fundamental theory, but 
 \includegraphics[width=\textwidth,height=14cm]{./figures/figure}
 \caption{\textit{The Topological Axis}. The double natural logarithms (y = lnln(Y)) of the main dimensionless physical quantities (Y) corresponds to the special string dimension series n = 4k + 2, from k = 0 to k = 7, showing the Bott
 periodicity $\delta n = 8$ [19]. This is the origin of the name `Topological Axis`. 
-\textit{In the macro-physics side, with length unit the Electron Compton wavelength} the Universe circumference 
+\textit{In the macro-physics side, with length unit the Electron Compton reduced wavelength} the Universe circumference 
     is tied to the bosonic critical dimension 26, while Bott reduction $\delta n = 8$ leads to n = 18: thermal photon (Cosmological Microwave Background), tied to the the mammal wavelength through the Sternheimer scale factor j (section 8.2); n = 10 (super-string dimension): Hydrogen atom, and n = 2: string. For the number 24 of transverse dimensions, it is
-    the Kotov length (section 4.3), through a factor 2$\pi a$, with $a \approx 137.036$. For $n \approx \Gamma $, the Atiyah constant (section 8.2), it is the galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years, section 2.1). For $k \approx e^{2}$, $y \approx 2e$, it is the Grandcosmos radius (section 3).
-   \textit{In the micro-physics side, with the same length unit, the Electron Compton wavelength}, the Space-Time-Matter
-    Holic dimension n = 30 (section 6) is tied to $c$ times the cosmic Supercycle period (section 5), while Bott reductions lead to the gauge bosons. The first one is for n = 22: GUT bosons, $10^{16}$ GeV, then n = 14: weak bosons and n = 6 (\textit{massive} gluons, about 10 MeV).
-    For the superstring n = 10, there are the Pions. For $k \approx \pi$, n $\approx \gamma \times \Gamma$, Y $\approx 496^2$ 
+    the Kotov length (section 4.3), through a factor 2$\pi a$, with $a \approx 137.036$. For $n \approx \Gamma $, the Atiyah constant (section 8.2), it is the galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years, section 2.1). For $k \approx e^{2}$, $y \approx 2e$, it is the Grandcosmos radius (section 3). The Space-Time-Matter Holic dimension n = 30 (section 6) is tied to $c$ times the cosmic Supercycle period (section 5). \textit{In the micro-physics side, with the same length unit, the Electron Compton reduced wavelength}, the value $n= 2e^e \approx 30$ is tied to the topon, the visible Universe reduced wavelength. Bott reductions from n 30 lead to the gauge bosons: for n = 22 they are the GUT bosons, $10^{16}$ GeV, for n = 14 the weak bosons and for n = 6 the (\textit{massive} gluons, about 10 MeV).
+    For the superstring value n = 10, there are the Pions. For $k \approx \pi$, n $\approx \gamma \times \Gamma$, Y $\approx 496^2$ 
     the square of the Green-Schwarz string dimension and the tenth root of the Monster cardinal, it is
     the Brout-Englert-Higgs boson (125 GeV). For k $\approx 2e^e$, it is the topon, the visible Universe wavelength,
     which identifies with the mono-radial unit length of the Bekenstein-Hawking Universe entropy (section 3).
