--- a/test.tex
+++ b/test.tex
@@ -168,13 +168,13 @@ In the same manner, \textit{this article prefigures the fundamental theory, but 
 periodicity $\delta n = 8$ [19]. This is the origin of the name `Topological Axis`. 
 \textit{In the macro-physics side, with length unit the Electron Compton reduced wavelength} the Universe circumference 
     is tied to the bosonic critical dimension 26, while Bott reduction $\delta n = 8$ leads to n = 18: thermal photon (Cosmological Microwave Background), tied to the the mammal wavelength through the Sternheimer scale factor j (section 8.2); n = 10 (super-string dimension): Hydrogen atom, and n = 2: string. For the number 24 of transverse dimensions, it is
-    the Kotov length (section 4.3), through a factor 2$\pi a$, with $a \approx 137.036$. For $n \approx \Gamma $, the Atiyah constant (section 8.2), it is the galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years, section 2.1). For $k \approx e^{2}$, $y \approx 2e$, it is the Grandcosmos radius (section 3). The Space-Time-Matter Holic dimension n = 30 (section 6) is tied to $c$ times the cosmic Supercycle period (section 5). \textit{In the micro-physics side, with the same length unit, the Electron Compton reduced wavelength}, the value $n= 2e^e \approx 30$ is tied to the topon, the visible Universe reduced wavelength. Bott reductions from n 30 lead to the gauge bosons: for n = 22 they are the GUT bosons, $10^{16}$ GeV, for n = 14 the weak bosons and for n = 6 the (\textit{massive} gluons, about 10 MeV).
-    For the superstring value n = 10, there are the Pions. For $k \approx \pi$, n $\approx \gamma \times \Gamma$, Y $\approx 496^2$ 
+    the Kotov length (section 4.3), through a factor 2$\pi a$, with $a \approx 137.036$. For $n \approx \Gamma $, the Atiyah constant (section 8.2), it is the galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years, section 2.1). For $k \approx e^{2}$, $y \approx 2e$, it is the Grandcosmos radius (section 3). The Space-Time-Matter Holic dimension n = 30 (section 6) is tied to $c$ times the cosmic Supercycle period (section 5). \textit{In the micro-physics side, with the same length unit, the Electron Compton reduced wavelength}, Bott reductions from n = 30 lead to the gauge bosons: n = 22 for the GUT bosons, ($10^{16}$ GeV), n = 14 for the weak bosons and for n = 6 for the (\textit{massive}) gluons, about 10 MeV.
+    For the intermediary superstring value n = 10, there are the Pions. For $k \approx \pi$, n $\approx \gamma \times \Gamma$, Y $\approx 496^2$ 
     the square of the Green-Schwarz string dimension and the tenth root of the Monster cardinal, it is
     the Brout-Englert-Higgs boson (125 GeV). For k $\approx 2e^e$, it is the topon, the visible Universe wavelength,
     which identifies with the mono-radial unit length of the Bekenstein-Hawking Universe entropy (section 3).
    \textit{With unit the electron mass}, n = 24 would correspond to the photon mass, while n $\approx \Gamma$, 
-    to the graviton mass \cite{sanchez 1}.
+    to the graviton mass \cite{sanchez1}.
     \textit{With unit the Kotov length}, the holic dimension n = 30 corresponds to the Monster group cardinal order, 
     apart a $\sqrt2$ factor.}
     \textit{The central dimension is n = 16, suggesting that the whole schema is tied to the Eddington's matrix $16 \times 16$}.
@@ -190,7 +190,7 @@ We look here for a systematic organization of dimensionless physical quantities 
 This Cosmological Fine-Tuning leads directly to a \textit{Gravitational Hydrogen molecule model of the visible universe} \cite{Sanchez1}.
 This defines the Universe horizon radius $R = 2a_{G} \lambdabar_{e}$, where the factor 2 comes from the bi-atomic structure, and where $\lambdabar_{e} = \hbar/cm_{e}$ is the Electron Compton reduced wavelength, while the gravitational coupling constant is: $a_{G} = \hbar c/Gm_{p}m_{H}$, where $m_p$ and $m_H$ are the proton and hydrogen atom masses. So, \textit{the speed $c$ is eliminated}, in accordance with Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R \approx 13,812~Gly $, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the most recent measurements \cite{Bonvin}: 72(3) (km/s)/Megaparsec. The latter confirms the value measured by the 1a type novae, while the standard optimization of 6 parameters results in a lower value, by $9\%$.
 
-Consider the wavelength of the visible Universe with critical mass $M= Rc^2/2G$: $$\lambdabar_{M} = \hbar /Mc \approx 4.00 \cdot 10^{-96} m$$ This `topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1. This scheme illustrates the function $f(n + 4) = f^{2}(n)$
+Consider the wavelength of the visible Universe with critical mass $M= Rc^2/2G$: $$\lambdabar_{M} = \hbar /Mc \approx 4.00 \cdot 10^{-96} m$$. This `topon` corresponds to the value $n \approx 2e$ e$, close to the touchstone n = 30 of the Topological Axis, see Fig. 1. This scheme illustrates the function $f(n + 4) = f^{2}(n)$
 and stems from the imbrication of relations of the form $\lambdabar_{e} /l_{micro} \sim (l_{macro} /\lambdabar_{e})^{2}$, followed by $ l_{macro} /\lambdabar_{e} \sim (\lambdabar_{e} /l^{\prime}_{micro} )^{2}$, leading to:
 $$
 \begin{array}{ll}
@@ -201,7 +201,7 @@ $$
 \sim (\lambdabar_{e}/ l_{Gl} )^{64} \sim (\lambdabar_{str} /\lambdabar_{e} )^{128} \sim 2^{256}\\ % 3rd row
 \end{array}
 $$
-This series include the Cosmic Microwave Background wavelength $\lambda_{CMB}$ and a string wavelength $\lambdabar_{str}$, with mass about 2 MeV. Hence, the correlation is eight-fold. They include implicitly the above double fine-tuning and three relations more that have been independently reported \cite{Sanchez1}. Thus, only three relations are really new. The overall large number $2^{256}$ has an obvious computational character, confirmed below by the dramatic appearance of the Eddington Large Number.
+This series include the Cosmic Microwave Background wavelength $\lambda_{CMB}$ and a string wavelength $\lambdabar_{str}$, with mass about 2 MeV. Hence, the correlation is eight-fold. They include implicitly the above double fine-tuning and three  more relations that have been independently reported \cite{Sanchez1}. Thus, only three relations are really new. The overall large number $2^{256}$ has an obvious computational character, confirmed below by the dramatic appearance of the Eddington Large Number.
 
 In particular, the relation $R/\lambdabar_{e} \sim (\lambda_{CMB} / \lambdabar_{e})^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation that is incompatible with the standard evolutionary cosmology. By this order of magnitude, we infer rather precise relations. With the Hydrogen radius $r_H$, we infer 
 $ R/r_H \approx (4\pi \lambda_{CMB}/r_H)^{4}$, precise to $0.6\%$. 
@@ -216,7 +216,7 @@ where $\lambdabar_{p}$ and $\lambdabar_{H}$ are the Proton and Hydrogen reduced 
 
 The gravitational Hydrogen molecule model \cite{Sanchez1} implies the following double correlation, which is the simplest case of Eddington's statistical theory \cite{Eddington}: the position of a `reference particle` is supposed to be determined 
 with an uncertainty of ${R/2}$. 
-For N particles of mass $m$ components of the visible Universe, the deviance is statistically divided by $\sqrt{N}$, where $N = M/m$. If $m$ is the principalvalue of the effective mass of the electron in the Hydrogen atom, $ m = m^{\prime}_{e} = m_{e} m_p/m_H $, and if, moreover, one equates the deviance $R/(2\sqrt{(M/m^{\prime}_{e})})$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/c m_{H}$, one obtains the double relation:
+For N particles of mass $m$ components of the visible Universe, the deviance is statistically divided by $\sqrt{N}$, where $N = M/m$. If $m$ is the principal value of the effective mass of the electron in the Hydrogen atom, $ m = m^{\prime}_{e} = m_{e} m_p/m_H $, and if, moreover, one equates the deviance $R/(2\sqrt{(M/m^{\prime}_{e})})$ to the Hydrogen reduced wavelength $\lambdabar_{H} = \hbar/c m_{H}$, one obtains the double relation:
 \begin{equation}
 R/2\lambdabar_{H} = (M/m^{\prime}_{e})^{1/2} = \hbar c/G m_{e} m_{p}
 \end{equation}
@@ -227,7 +227,7 @@ and Particle Physics, the third pillar, Statistical Physics, directly makes this
 Recall that, contrary to what is often stated, quantum physics does not limit to micro-physics. Indeed, the exclusion principle applies in both solid state physics and in stellar physics. In particular, for a star containing $N_s$ atoms, in which the pressure has reached the quantum degeneracy value (case of white dwarfs), exclusion principle applies for electrons, and the radius star is about $R/N_{s}^{1/3}$ \cite{Sanchez1}. So the formula giving the Hubble radius $R$, a very difficult measurement which puzzled a whole century, was implicitly contained in astrophysics textbooks. 
 The universe radius amazingly appears as the limit of a mono-atomic star radius, for which the electrons are in degeneracy state. Eddingon was aware of this Cosmologic Exclusion Principle, but could not conclude since, at his epoch, the Hubble measurement for $R$ was false by an order of magnitude.
 
-The reason for this discrepancy is that textit{Lema\^itre and Hubble considered galaxies of the Local Group, which do not participate the so-called space expansion}. In fact, it is sufficient to introduce a repulsive force proportional to separation distance, for explanation of the steady-state exponential recession. There is no need of the so-called `dark energy`, the repulsive force is equivalent to reintroduce \textit the {Einstein cosmological constant, but with invariant value} $1/R^{2}$. 
+The reason for this discrepancy is that \textit{Lema\^itre and Hubble considered galaxies of the Local Group, which do not participate the so-called space expansion}. In fact, it is sufficient to introduce a repulsive force proportional to separation distance, for explanation of the steady-state exponential recession. The repulsive force is equivalent to reintroduce \textit the {Einstein cosmological constant, but with invariant value} $1/R^{2}$. There is no need of the so-called `dark energy`
 
 The distance for which this force exceeds attractive gravitation between galaxies is about $10^{6}$ light years \cite{Sanchez1}, a typical galaxy group radius, which corresponds, in the Topological Axis, to the Atiyah Constant $\Gamma$, (section 8.2), see Fig 1.
 
