--- a/test.tex
+++ b/test.tex
@@ -190,7 +190,7 @@ We look here for a systematic organization of dimensionless physical quantities 
 This Cosmological Fine-Tuning leads directly to a \textit{Gravitational Hydrogen molecule model of the visible universe} \cite{Sanchez1}.
 This defines the Universe horizon radius $R = 2a_{G} \lambdabar_{e}$, where the factor 2 comes from the bi-atomic structure, and where $\lambdabar_{e} = \hbar/cm_{e}$ is the Electron Compton reduced wavelength, while the gravitational coupling constant is: $a_{G} = \hbar c/Gm_{p}m_{H}$, where $m_p$ and $m_H$ are the proton and hydrogen atom masses. So, \textit{the speed $c$ is eliminated}, in accordance with Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R \approx 13,812~Gly $, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the most recent measurements \cite{Bonvin}: 72(3) (km/s)/Megaparsec. The latter confirms the value measured by the 1a type novae, while the standard optimization of 6 parameters results in a lower value, by $9\%$.
 
-Consider the wavelength of the visible Universe with critical mass $M= Rc^2/2G$: $$\lambdabar_{M} = \hbar /Mc \approx 4.00 \cdot 10^{-96} m$$. This `topon` corresponds to the value $n \approx 2e$ e$, close to the touchstone n = 30 of the Topological Axis, see Fig. 1. This scheme illustrates the function $f(n + 4) = f^{2}(n)$
+Consider the wavelength of the visible Universe with critical mass $M= Rc^2/2G$: $$\lambdabar_{M} = \hbar /Mc \approx 4.00 \cdot 10^{-96} m$$. This `topon` corresponds to the value $n \approx 2e^e$, close to the touchstone n = 30 of the Topological Axis, see Fig. 1. This scheme illustrates the function $f(n + 4) = f^{2}(n)$
 and stems from the imbrication of relations of the form $\lambdabar_{e} /l_{micro} \sim (l_{macro} /\lambdabar_{e})^{2}$, followed by $ l_{macro} /\lambdabar_{e} \sim (\lambdabar_{e} /l^{\prime}_{micro} )^{2}$, leading to:
 $$
 \begin{array}{ll}
