--- a/test.tex
+++ b/test.tex
@@ -227,7 +227,7 @@ and Particle Physics, the third pillar, Statistical Physics, directly makes this
 Recall that, contrary to what is often stated, quantum physics does not limit to micro-physics. Indeed, the exclusion principle applies in both solid state physics and in stellar physics. In particular, for a star containing $N_s$ atoms, in which the pressure has reached the quantum degeneracy value (case of white dwarfs), exclusion principle applies for electrons, and the radius star is about $R/N_{s}^{1/3}$ \cite{Sanchez1}. So the formula giving the Hubble radius $R$, a very difficult measurement which puzzled a whole century, was implicitly contained in astrophysics textbooks. 
 The universe radius amazingly appears as the limit of a mono-atomic star radius, for which the electrons are in degeneracy state. Eddingon was aware of this Cosmologic Exclusion Principle, but could not conclude since, at his epoch, the Hubble measurement for $R$ was false by an order of magnitude.
 
-The reason for this discrepancy is that \textit{Lema\^itre and Hubble considered galaxies of the Local Group, which do not participate the so-called space expansion}. In fact, it is sufficient to introduce a repulsive force proportional to separation distance, for explanation of the steady-state exponential recession. The repulsive force is equivalent to reintroduce \textit the {Einstein cosmological constant, but with invariant value} $1/R^{2}$. There is no need of the so-called `dark energy`
+The reason for this discrepancy is that \textit{Lema\^itre and Hubble considered galaxies of the Local Group, which do not participate the so-called space expansion}. In fact, it is sufficient to introduce a repulsive force proportional to separation distance, for explanation of the steady-state exponential recession. \textit{The repulsive force is equivalent to reintroduce  the Einstein cosmological constant, but with invariant value} $1/R^{2}$. There is no need of the so-called `dark energy`.
 
 The distance for which this force exceeds attractive gravitation between galaxies is about $10^{6}$ light years \cite{Sanchez1}, a typical galaxy group radius, which corresponds, in the Topological Axis, to the Atiyah Constant $\Gamma$, (section 8.2), see Fig 1.
 
@@ -237,21 +237,20 @@ In the steady-state cosmology of Bondi, Gold and Hoyle \cite{Sanchez1}, such a r
 \section{The Toponic Holographic Quantification}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-In the above steady-state cosmological, the Perfect Cosmological Principle implies the invariance of the Universe mean mass density $\rho$ and the exponential recession of galaxy groups, with time constant $R/c$ being compensated by the appearance of $m_n$ massive neutrons at rate $c^{3} /Gm_{n}$, 
-corresponding to about one neutron by century in a cathedral volume. 
-The invariant visible Universe radius $R$ is then defined by the Schwarszchild relation, so that each topon is the center of an equivalent $R$-radius black hole, of critical mass $M = Rc^{2} /2G$ and topon wavelength $\lambdabar_M = \hbar/Mc = 2l_{P}^{2} /R$. The Bekenstein-Hawking entropy of this black-hole Universe shows an 1D extension of the standard Holographic
-Principle, until now devoted to 3D application only \cite{Bousso}:
+In the above steady-state cosmological model, the Perfect Cosmological Principle implies the invariance of the Universe mean mass density $\rho$, defined at large. This preducts also the exponential recession of galaxy groups, with time constant $R/c$ being compensated by the appearance of $m_n$ massive neutrons at rate $c^{3} /Gm_{n}$, 
+corresponding to about one neutron by century in about a cathedral volume. 
+The invariant visible Universe radius $R$ is then defined by the Schwarszchild relation, so that each topon, with wavelength $\lambdabar_M = \hbar/Mc = 2l_{P}^{2} /R$ is the center of an equivalent $R$-radius black hole, of critical mass $M = Rc^{2} /2G$. The Bekenstein-Hawking entropy of this black-hole Universe shows an 1D extension \citeSanchez1} of the standard Holographic Principle, until now devoted to 3D application only \cite{Bousso}:
 \begin{equation}
 S_{BH} = A/4 = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M}
 \end{equation}
 where $A$ is the horizon sphere area and $l_{P} = (G\hbar/c^{3} )^{1/2}$ is the Planck's length. Note that, while the standard evolutionary cosmology use differential equations, which are not adapted to a single Universe, as Poincar\'{e} stated \cite{Sanchez1}, the Permanent Cosmology must favor such integral relations. Here it is the \textit{Archimedes Testimony tying the Disk Area to its Perimeter}.
 
-In the standard evolutionary view, the observed homogeneity of causally disconnected regions of space is known as the so-called `horizon problem`, and is at the origin of the awkward inflation hypothesis, which is unnecessary in the steady-state model. Indeed, the critical condition is provided by the above very definition of $R$.
+In the standard evolutionary view, the observed homogeneity of causally disconnected regions of space is known as the so-called `horizon problem`, and is at the origin of the awkward inflation hypothesis, which is unnecessary in the steady-state model. Indeed, \textit{the critical condition is provided by the above very definition of $R$}.
 
-The topon breaks the so-called `Planck's wall` by a factor $l_{P}/\lambdabar_{M}\sim 10^{61}$. This explains why this holographic relation was long time unnoticed. Indeed, it was admitted that $l_{P}$ was the quantum of space: in fact \textit{the Planck's length is an intermediate holographic length only}.
+The topon breaks the so-called `Planck's wall` by a factor $l_{P}/\lambdabar_{M}\approx 10^{61}$. This explains why this holographic relation was long time unnoticed. Indeed, it was admitted that $l_{P}$ was the quantum of space: in fact \textit{the Planck's length is an intermediate holographic length only}.
 
 the gravitational potential energy of a critical homogeneous sphere is $-(3/5)GM^{2}/R = -
-(3/10)Mc^{2}$, while the \textit{non-relativistic} kinetic energy of galaxies is $(3/10)Mc^{2}$ \cite{Sanchez1}. Their sum is therefore zero: the density of the so-called `dark energy` is compatible with 7/10, so that dark energy is a trivial false problem. 
+(3/10)Mc^{2}$, while the \textit{non-relativistic} kinetic energy of galaxies is $(3/10)Mc^{2}$ \cite{Sanchez1}. Their sum is therefore zero: the density of the so-called `dark energy` is compatible with 7/10, so that dark energy was a trivial false problem. 
 The Relativity theory is a local theory that does not apply in cosmology at large: 
 galaxies actually reach speed $c$, and, crossing the horizon, enter a Grandcosmos of radius $R_{GC}$, given, as a first approximation, by the symmetrical holographic relation, here monochrome instead of the above mono-radial one:
 \begin{equation}
@@ -269,14 +268,14 @@ S^{\prime}_{BH}\, = \pi(R^{\prime}/l_{P})^{2} = 2\pi R_{GC} /l_{P}
 \end{equation}
 This value will be confirmed in the section 5 (Fig.6).
 
-Assuming the Toponic Quantification Hypothesis, the mass of a particle is an exact sub-multiple 
-of the critical  mass $M$ of the visible Universe: $m = M/N_{m}$, and its canonical wavelength is 
+The Toponic Quantification Hypothesis assumes that the mass of a particle is an exact sub-multiple 
+of the critical  mass $M$ of the visible Universe: $m = M/N_{m}$. Thus its wavelength is 
 $N_m \lambdabar_{M}$, allowing the following holographic extension of the above mono-radial holographic conservation:
 \begin{equation}
 S_{BH} = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M} = 2\pi N_{m} R/\lambdabar_{m}
 \end{equation}
 This series of diametrical circles generate, by scanning, the approximation of a sphere: thus it goes 
-from disk to sphere. Note that \textit{this justifies the factor $\frac{1}{4}$ in the BH entropy}. 
+from the disk to the sphere with area $\pi(R/l_{P})^{2}$. Note that \textit{this justifies the factor $\frac{1}{4}$ in the BH entropy}. 
 But, for the approximation to be sufficient, \textit{the numbers $N_{m}$ must be very large}. In this way, the Cosmos-
 Computer can use the computational properties of the mathematical constants of the continuous analysis, such as $e$ and $\pi$, see section 9 and 10 (Discussion).
 
