--- a/test.tex
+++ b/test.tex
@@ -239,7 +239,7 @@ In the steady-state cosmology of Bondi, Gold and Hoyle \cite{Sanchez1}, such a r
 
 In the above steady-state cosmological model, the Perfect Cosmological Principle implies the invariance of the Universe mean mass density $\rho$, defined at large. This preducts also the exponential recession of galaxy groups, with time constant $R/c$ being compensated by the appearance of $m_n$ massive neutrons at rate $c^{3} /Gm_{n}$, 
 corresponding to about one neutron by century in about a cathedral volume. 
-The invariant visible Universe radius $R$ is then defined by the Schwarszchild relation, so that each topon, with wavelength $\lambdabar_M = \hbar/Mc = 2l_{P}^{2} /R$ is the center of an equivalent $R$-radius black hole, of critical mass $M = Rc^{2} /2G$. The Bekenstein-Hawking entropy of this black-hole Universe shows an 1D extension \citeSanchez1} of the standard Holographic Principle, until now devoted to 3D application only \cite{Bousso}:
+The invariant visible Universe radius $R$ is then defined by the Schwarszchild relation, so that each topon, with wavelength $\lambdabar_M = \hbar/Mc = 2l_{P}^{2} /R$ is the center of an equivalent $R$-radius black hole, of critical mass $M = Rc^{2} /2G$. The Bekenstein-Hawking entropy of this black-hole Universe shows an 1D extension \cite{Sanchez1} of the standard Holographic Principle, until now devoted to 3D application only \cite{Bousso}:
 \begin{equation}
 S_{BH} = A/4 = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M}
 \end{equation}
